--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -123,6 +123,7 @@
 
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/linearLayout7"
                     android:layout_width="match_parent"
@@ -141,33 +142,29 @@
                         android:layout_weight="0.33">
 
                         <ImageView
-                            android:id="@+id/imageView7"
+                            android:id="@+id/img_message"
                             android:layout_width="41dp"
                             android:layout_height="31dp"
 
                             android:layout_marginStart="70dp"
-                            android:src="@drawable/baseline_person_24"
+                            android:src="@drawable/comments"
                             app:layout_constraintBottom_toBottomOf="@+id/textView12"
-                            app:layout_constraintStart_toEndOf="@+id/textView9"
-                            app:layout_constraintTop_toTopOf="@+id/textView9">
-
-                        </ImageView>
+                            app:layout_constraintStart_toEndOf="@+id/txtrname"
+                            app:layout_constraintTop_toTopOf="@+id/txtrname" />
 
                         <ImageView
-                            android:id="@+id/imageView7"
+                            android:id="@+id/img_call"
                             android:layout_width="41dp"
                             android:layout_height="31dp"
 
                             android:layout_marginEnd="16dp"
-                            android:src="@drawable/baseline_add_location_24"
+                            android:src="@drawable/baseline_call_24"
                             app:layout_constraintBottom_toBottomOf="@+id/textView12"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="@+id/textView9">
-
-                        </ImageView>
+                            app:layout_constraintTop_toTopOf="@+id/txtrname" />
 
                         <ImageView
-                            android:id="@+id/imageView6"
+                            android:id="@+id/img_renter"
                             android:layout_width="64dp"
                             android:layout_height="65dp"
                             android:layout_marginTop="4dp"
@@ -178,7 +175,7 @@
                             app:srcCompat="@drawable/lambo" />
 
                         <TextView
-                            android:id="@+id/textView9"
+                            android:id="@+id/txtrname"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
@@ -186,8 +183,8 @@
                             android:textColor="#000000"
                             android:textSize="16sp"
                             android:textStyle="bold"
-                            app:layout_constraintStart_toEndOf="@+id/imageView6"
-                            app:layout_constraintTop_toTopOf="@+id/imageView6" />
+                            app:layout_constraintStart_toEndOf="@+id/img_renter"
+                            app:layout_constraintTop_toTopOf="@+id/img_renter" />
 
                         <TextView
                             android:id="@+id/textView12"
@@ -196,11 +193,11 @@
                             android:layout_marginEnd="148dp"
                             android:text="Renter"
                             android:textColor="#000000"
-                            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
-                            app:layout_constraintEnd_toStartOf="@+id/imageView7"
+                            app:layout_constraintBottom_toBottomOf="@+id/img_renter"
+                            app:layout_constraintEnd_toStartOf="@+id/img_call"
                             app:layout_constraintHorizontal_bias="0.0"
-                            app:layout_constraintStart_toStartOf="@+id/textView9"
-                            app:layout_constraintTop_toBottomOf="@+id/textView9"
+                            app:layout_constraintStart_toStartOf="@+id/txtrname"
+                            app:layout_constraintTop_toBottomOf="@+id/txtrname"
                             app:layout_constraintVertical_bias="0.666" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -242,7 +239,7 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <ImageView
-                            android:id="@+id/imageView10"
+                            android:id="@+id/img_passanger"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
@@ -257,18 +254,18 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:text="2 Passengers"
-                            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
-                            app:layout_constraintStart_toEndOf="@+id/imageView10"
-                            app:layout_constraintTop_toTopOf="@+id/imageView10" />
+                            app:layout_constraintBottom_toBottomOf="@+id/img_passanger"
+                            app:layout_constraintStart_toEndOf="@+id/img_passanger"
+                            app:layout_constraintTop_toTopOf="@+id/img_passanger" />
 
                         <ImageView
-                            android:id="@+id/imageView11"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:id="@+id/img_airconditioning"
+                            android:layout_width="26dp"
+                            android:layout_height="30dp"
                             android:layout_marginTop="8dp"
-                            app:layout_constraintStart_toStartOf="@+id/imageView10"
-                            app:layout_constraintTop_toBottomOf="@+id/imageView10"
-                            app:srcCompat="@drawable/baseline_person_24" />
+                            app:layout_constraintStart_toStartOf="@+id/img_passanger"
+                            app:layout_constraintTop_toBottomOf="@+id/img_passanger"
+                            app:srcCompat="@drawable/air_conditioning" />
 
                         <TextView
                             android:id="@+id/textView15"
@@ -276,61 +273,62 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:text="Air Conditioning"
-                            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
-                            app:layout_constraintStart_toEndOf="@+id/imageView11"
-                            app:layout_constraintTop_toTopOf="@+id/imageView11" />
+                            app:layout_constraintBottom_toBottomOf="@+id/img_airconditioning"
+                            app:layout_constraintStart_toEndOf="@+id/img_airconditioning"
+                            app:layout_constraintTop_toTopOf="@+id/img_airconditioning" />
 
                         <ImageView
-                            android:id="@+id/imageView12"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            app:layout_constraintStart_toStartOf="@+id/imageView11"
-                            app:layout_constraintTop_toBottomOf="@+id/imageView11"
-                            app:srcCompat="@drawable/baseline_person_24" />
+                            android:id="@+id/img_manual"
+                            android:layout_width="27dp"
+                            android:layout_height="23dp"
+                            android:layout_marginStart="4dp"
+                            android:layout_marginTop="4dp"
+                            app:layout_constraintStart_toStartOf="@+id/img_airconditioning"
+                            app:layout_constraintTop_toBottomOf="@+id/img_airconditioning"
+                            app:srcCompat="@drawable/gear_stick" />
 
                         <TextView
-                            android:id="@+id/textView16"
+                            android:id="@+id/txtgear"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:text="Manuual"
-                            app:layout_constraintBottom_toBottomOf="@+id/imageView12"
-                            app:layout_constraintStart_toEndOf="@+id/imageView12"
-                            app:layout_constraintTop_toTopOf="@+id/imageView12" />
+                            app:layout_constraintBottom_toBottomOf="@+id/img_manual"
+                            app:layout_constraintStart_toEndOf="@+id/img_manual"
+                            app:layout_constraintTop_toTopOf="@+id/img_manual" />
 
                         <ImageView
-                            android:id="@+id/imageView13"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:id="@+id/img_door"
+                            android:layout_width="26dp"
+                            android:layout_height="28dp"
                             android:layout_marginStart="40dp"
-                            app:layout_constraintBottom_toBottomOf="@+id/textView17"
+                            app:layout_constraintBottom_toBottomOf="@+id/txtdoor"
                             app:layout_constraintStart_toEndOf="@+id/textView14"
-                            app:layout_constraintTop_toTopOf="@+id/textView17"
+                            app:layout_constraintTop_toTopOf="@+id/txtdoor"
                             app:layout_constraintVertical_bias="1.0"
-                            app:srcCompat="@drawable/baseline_drive_eta_24" />
+                            app:srcCompat="@drawable/car_door" />
 
                         <TextView
-                            android:id="@+id/textView17"
+                            android:id="@+id/txtdoor"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="32dp"
                             android:text="2 Doors"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.098"
-                            app:layout_constraintStart_toEndOf="@+id/imageView13"
+                            app:layout_constraintStart_toEndOf="@+id/img_door"
                             app:layout_constraintTop_toTopOf="@+id/textView14" />
 
                         <ImageView
-                            android:id="@+id/imageView14"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
+                            android:id="@+id/img_fuel"
+                            android:layout_width="35dp"
+                            android:layout_height="37dp"
+                            android:layout_marginStart="24dp"
                             app:layout_constraintBottom_toBottomOf="@+id/textView18"
                             app:layout_constraintStart_toEndOf="@+id/textView15"
                             app:layout_constraintTop_toTopOf="@+id/textView18"
-                            app:layout_constraintVertical_bias="0.4"
-                            app:srcCompat="@drawable/baseline_drive_eta_24" />
+                            app:layout_constraintVertical_bias="0.0"
+                            app:srcCompat="@drawable/fuel_station" />
 
                         <TextView
                             android:id="@+id/textView18"
@@ -338,10 +336,10 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="16dp"
                             android:text="Fuel Info. : Full to Full"
-                            app:layout_constraintBottom_toTopOf="@+id/textView16"
+                            app:layout_constraintBottom_toTopOf="@+id/txtgear"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toEndOf="@+id/imageView14"
-                            app:layout_constraintTop_toBottomOf="@+id/textView17" />
+                            app:layout_constraintStart_toEndOf="@+id/img_fuel"
+                            app:layout_constraintTop_toBottomOf="@+id/txtdoor" />
 
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -368,7 +366,7 @@
                         android:layout_weight="0.33">
 
                         <ImageView
-                            android:id="@+id/imageView7"
+                            android:id="@+id/img_location"
                             android:layout_width="41dp"
                             android:layout_height="31dp"
 
@@ -438,7 +436,7 @@
                             tools:ignore="DuplicateIds" />
 
                         <TextView
-                            android:id="@+id/timeTxt2"
+                            android:id="@+id/txttime"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
@@ -458,7 +456,7 @@
                             android:layout_margin="8dp"
                             android:text="Max. Speed"
                             android:textColor="@color/black"
-                            app:layout_constraintEnd_toEndOf="@+id/timeTxt2"
+                            app:layout_constraintEnd_toEndOf="@+id/txttime"
                             app:layout_constraintStart_toStartOf="@+id/imageView9"
                             app:layout_constraintTop_toBottomOf="@+id/imageView9"
                             tools:ignore="DuplicateIds" />
@@ -570,7 +568,7 @@
 
 
                 <LinearLayout
-                    android:id="@+id/linearLayout6"
+                    android:id="@+id/namelayout"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
                     android:layout_marginTop="20dp"
@@ -588,20 +586,18 @@
                         android:layout_weight="0.33">
 
                         <ImageView
-                            android:id="@+id/imageView7"
+                            android:id="@+id/img_favourite"
                             android:layout_width="41dp"
                             android:layout_height="31dp"
 
-                            android:src="@drawable/baseline_lock_24"
-                            app:layout_constraintBottom_toBottomOf="@+id/cname"
+                            android:src="@drawable/heart"
+                            app:layout_constraintBottom_toBottomOf="@+id/txtcname"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toEndOf="@+id/cname"
-                            app:layout_constraintTop_toTopOf="parent">
-
-                        </ImageView>
+                            app:layout_constraintStart_toEndOf="@+id/txtcname"
+                            app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
-                            android:id="@+id/cname"
+                            android:id="@+id/txtcname"
                             android:layout_width="299dp"
                             android:layout_height="36dp"
                             android:layout_marginStart="16dp"
@@ -622,12 +618,12 @@
                             android:layout_marginStart="16dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/cname"
+                            app:layout_constraintTop_toBottomOf="@+id/txtcname"
                             app:srcCompat="@drawable/star"
                             tools:ignore="DuplicateIds" />
 
                         <TextView
-                            android:id="@+id/timeTxt2"
+                            android:id="@+id/txtrating"
                             android:layout_width="195dp"
                             android:layout_height="24dp"
                             android:layout_marginStart="8dp"
@@ -649,8 +645,8 @@
                     android:layout_width="294dp"
                     android:layout_height="56dp"
                     android:layout_marginBottom="48dp"
-                    android:text="Booking Now"
                     android:backgroundTint="@color/green"
+                    android:text="Booking Now"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.493"
