--- a/app/src/main/res/layout/activity_date_book.xml
+++ b/app/src/main/res/layout/activity_date_book.xml
@@ -12,7 +12,7 @@
         android:layout_height="179dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:src="@tools:sample/avatars"
+        android:src="@drawable/settings"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,37 +30,50 @@
         app:layout_constraintTop_toTopOf="@+id/imageView12"
         app:layout_constraintVertical_bias="0.233" />
 
-    <TextView
-        android:id="@+id/textView16"
+    <EditText
+        android:id="@+id/dp"
         android:layout_width="216dp"
-        android:layout_height="34dp"
-        android:layout_marginTop="44dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.161"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView12" />
-
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="219dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="24dp"
-        android:text="TextView"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:ems="10"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:hint="Starting Date"
+        android:inputType="text"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.164"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView16" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView12" />
 
+    <EditText
+        android:id="@+id/dp2"
+        android:layout_width="219dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="24dp"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:ems="10"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:hint="Ending Date"
+        android:inputType="text"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.164"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dp" />
     <RadioGroup
         android:id="@+id/radioGroup2"
         android:layout_width="296dp"
         android:layout_height="293dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="@+id/textView17"
+        app:layout_constraintEnd_toEndOf="@+id/dp2"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView17"
-        app:layout_constraintTop_toBottomOf="@+id/textView17">
+        app:layout_constraintStart_toStartOf="@+id/dp2"
+        app:layout_constraintTop_toBottomOf="@+id/dp2">
 
         <RadioButton
             android:id="@+id/radioButton2"
@@ -100,42 +113,44 @@
     </RadioGroup>
 
     <TextView
-        android:id="@+id/textView22"
-        android:layout_width="140dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="32dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />
-
-    <TextView
-        android:id="@+id/textView23"
+        android:id="@+id/totalRent"
         android:layout_width="107dp"
         android:layout_height="43dp"
         android:layout_marginTop="32dp"
-        android:text="TextView"
+        android:textSize="16dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.602"
-        app:layout_constraintStart_toEndOf="@+id/textView22"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView23" />
+        app:layout_constraintTop_toBottomOf="@+id/totalRent" />
 
     <TextView
-        android:id="@+id/textView24"
+        android:id="@+id/rent"
         android:layout_width="182dp"
         android:layout_height="63dp"
-        android:text="TextView"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView22" />
+        app:layout_constraintEnd_toStartOf="@+id/button"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/day"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="506dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="47dp"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/totalRent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/radioGroup2"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 </androidx.constraintlayout.widget.ConstraintLayout>
