--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -285,6 +285,35 @@
 
             </LinearLayout>
 
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:id="@+id/shimmer"
+                android:paddingEnd="24dp"
+                android:paddingStart="24dp"
+                android:gravity="center">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <include layout="@layout/my_item_placeholder"/>
+                    <include layout="@layout/my_item_placeholder"/>
+                    <include layout="@layout/my_item_placeholder"/>
+                    <include layout="@layout/my_item_placeholder"/>
+                    <include layout="@layout/my_item_placeholder"/>
+                    <include layout="@layout/my_item_placeholder"/>
+                    <include layout="@layout/my_item_placeholder"/>
+                    <include layout="@layout/my_item_placeholder"/>
+
+                </LinearLayout>
+
+
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -292,7 +321,13 @@
                 android:id="@+id/viewPopular"
                 android:clipToPadding="false"
                 android:paddingEnd="24dp"
-                android:paddingStart="24dp"/>
+                android:paddingStart="24dp"
+                android:visibility="gone"
+                />
+
+
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -324,6 +359,37 @@
 
 
             </LinearLayout>
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:id="@+id/shimmer_1"
+                android:paddingEnd="24dp"
+                android:paddingStart="24dp"
+                android:gravity="center">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <include layout="@layout/my_item_placeholder"/>
+                    <include layout="@layout/my_item_placeholder"/>
+                    <include layout="@layout/my_item_placeholder"/>
+                    <include layout="@layout/my_item_placeholder"/>
+                    <include layout="@layout/my_item_placeholder"/>
+                    <include layout="@layout/my_item_placeholder"/>
+                    <include layout="@layout/my_item_placeholder"/>
+                    <include layout="@layout/my_item_placeholder"/>
+
+                </LinearLayout>
+
+
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+
+
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -332,7 +398,9 @@
                 android:layout_marginBottom="30dp"
                 android:clipToPadding="false"
                 android:paddingEnd="24dp"
-                android:paddingStart="24dp"/>
+                android:paddingStart="24dp"
+                android:visibility="gone"
+                />
 
             <RelativeLayout
                 android:layout_width="wrap_content"
